[package]
name = "my_crate"
version = "0.1.0"
edition = "2021"

# 必须字段
description = "A short description of what my_crate does"
license = "MIT"  # 或者 "Apache-2.0"，根据你的项目选择许可证
# 可选的其他元数据字段
license-file = "LICENSE"  # 如果你有许可证文件的话
documentation = "https://github.com/isLiuyinghao/my_crate"  # 如果有文档链接的话
repository = "https://github.com/isLiuyinghao/my_crate"  # 如果有 GitHub 仓库的话
homepage = "https://github.com/isLiuyinghao/my_crate"  # 项目主页链接
