[package]
name = "is_lolo_crate_v1"
version = "0.1.0"
edition = "2021"

# 必须字段
description = "A short description of what my_crate does"
documentation = "https://github.com/isLiuyinghao/my_crate"
repository = "https://github.com/isLiuyinghao/my_crate" 
homepage = "https://github.com/isLiuyinghao/my_crate"  
license = "MIT"
